--- a/uploadtemplate.html
+++ b/uploadtemplate.html
@@ -631,7 +631,6 @@
         <div class="sidebar-footer">
             <div class="sidebar-user-profile">
                 <div class="user-avatar" id="sidebarUserAvatar">
-                    <!-- Avatar dimuat oleh JS -->
                 </div>
                 <div class="sidebar-user-info">
                     <span class="user-name" id="sidebarUserName">Admin</span>
@@ -688,7 +687,6 @@
                             </tr>
                         </thead>
                         <tbody id="templateTableBody">
-                            <!-- Data akan dimuat di sini oleh JavaScript -->
                         </tbody>
                     </table>
                 </div>
@@ -696,7 +694,6 @@
         </div>
     </main>
 
-    <!-- Modal Upload Template -->
     <div class="modal-overlay" id="uploadModal">
         <div class="modal-card">
             <div class="modal-header">
@@ -760,7 +757,6 @@
     </footer>
 
     <script>
-        // Inisialisasi Supabase
         const supabaseUrl = 'https://kbycumhmrnfrsillkqbz.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtieWN1bWhtcm5mcnNpbGxrcWJ6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1ODQxNjIsImV4cCI6MjA4NTE2MDE2Mn0.-gbbN9cpdfsTTUyQ2Q2znF9KXj-KjOzCqlnSEc-wEYE';
         const _supabase = supabase.createClient(supabaseUrl, supabaseKey);
@@ -802,7 +798,6 @@
                 });
             });
 
-            // Auto-expand active dropdown on page load
             const activeDropdown = document.querySelector('.sidebar-menu li.active > .sidebar-submenu');
             if (activeDropdown) {
                 activeDropdown.style.maxHeight = activeDropdown.scrollHeight + "px";
@@ -814,7 +809,6 @@
             const adminPhoto = sessionStorage.getItem('adminPhoto');
             const adminInitial = sessionStorage.getItem('adminInitial');
 
-            // Cek sesi login, jika tidak ada data, kembalikan ke halaman login
             if (!adminNama) {
                 alert('Sesi Anda telah berakhir atau Anda belum login. Silakan login kembali.');
                 window.location.href = 'index.html';
@@ -826,14 +820,12 @@
 
             nameEl.textContent = adminNama;
 
-            // Tampilkan foto jika ada, jika tidak, tampilkan inisial nama
             if (adminPhoto && adminPhoto !== 'null' && adminPhoto !== '') {
                 avatarEl.innerHTML = `<img src="${adminPhoto}" alt="Foto ${adminNama}">`;
             } else {
                 avatarEl.innerHTML = `<span>${adminInitial}</span>`;
             }
 
-            // Tambahkan event listener untuk tombol logout untuk membersihkan sesi
             const logoutBtn = document.querySelector('.logout-btn');
             logoutBtn.addEventListener('click', function() {
                 sessionStorage.clear(); // Hapus semua data sesi saat logout
@@ -849,7 +841,6 @@
             const saveBtn = document.getElementById('saveUploadBtn');
             const namaInput = document.getElementById('namaBerkas');
 
-            // Mapping Data Kode ke Nama Berkas
             const berkasMap = {
                 'D-01': 'Surat Permohonan Mutasi',
                 'D-02': 'Surat Keterangan Formasi dan Persetujuan',
@@ -859,7 +850,6 @@
                 'D-06': 'Surat Keterangan Berkelakuan Baik'
             };
 
-            // Event Listener untuk Dropdown
             kodeSelect.addEventListener('change', function() {
                 const selectedCode = this.value;
                 if (berkasMap[selectedCode]) {
@@ -869,7 +859,6 @@
                 }
             });
 
-            // Fungsi Buka/Tutup Modal
             function openModal() {
                 modal.classList.add('active');
                 document.body.style.overflow = 'hidden';
@@ -891,7 +880,6 @@
                 if (e.target === modal) closeModal();
             });
 
-            // Logika Simpan Data
             saveBtn.addEventListener('click', async function() {
                 const kodeValue = kodeSelect.value;
                 const namaValue = namaInput.value;
@@ -907,7 +895,6 @@
                 this.disabled = true;
 
                 try {
-                    // 1. Upload file ke storage
                     const fileExt = file.name.split('.').pop();
                     const fileName = `template-dokumen/${kodeValue}-${Date.now()}.${fileExt}`;
 
@@ -917,14 +904,12 @@
 
                     if (uploadError) throw uploadError;
 
-                    // 2. Dapatkan URL publik
                     const { data: urlData } = _supabase.storage
                         .from('aset')
                         .getPublicUrl(fileName);
                     
                     const fileUrl = urlData.publicUrl;
 
-                    // 3. Simpan data ke tabel 'uploadtemplate'
                     const { error: insertError } = await _supabase
                         .from('uploadtemplate')
                         .upsert({
@@ -966,7 +951,7 @@
                     return;
                 }
 
-                tableBody.innerHTML = ''; // Bersihkan loading
+                tableBody.innerHTML = ''; 
                 data.forEach((template, index) => {
                     const fileIcon = template.file_berkas.endsWith('.pdf') ? 'fa-file-pdf' : 'fa-file-word';
                     const fileName = decodeURIComponent(template.file_berkas.split('/').pop());
