--- a/profilcabdin.html
+++ b/profilcabdin.html
@@ -672,7 +672,7 @@
                     <li><a href="profilcabdin.html"><i class="fas fa-university"></i> Identitas Lembaga</a></li>
                     <li><a href="admincabdin.html"><i class="fas fa-user-shield"></i> Admin Cabdin</a></li>
                     <li><a href="adminsekolah.html"><i class="fas fa-user-cog"></i> Admin Sekolah</a></li>
-                    <li><a href="#"><i class="fas fa-file-upload"></i> Upload Template Dokumen Mutasi</a></li>
+                    <li><a href="uploadtemplate.html"><i class="fas fa-file-upload"></i> Upload Template Dokumen Mutasi</a></li>
                 </ul>
             </li>
             <li>
@@ -1187,3 +1187,4 @@
     </script>
 </body>
 </html>
+
